[package]
name = "poseidon-ark"
version = "0.0.1"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Poseidon hash implementation"
repository = "https://github.com/arnaucube/poseidon-ark"
readme = "README.md"

[dependencies]
ark-ff = "0.4.0"
ark-bn254 = { version = "0.4.0" }
ark-std = { version = "0.4.0" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_poseidon_hash"
harness = false
